After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773303 - GApplication leaks option_strings
GApplication leaks option_strings
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gapplication
2.50.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2016-10-21 08:21 UTC by Timm Bäder
Modified: 2016-10-24 10:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gapplication: Properly free the option_strings (1.16 KB, patch)
2016-10-21 08:21 UTC, Timm Bäder
committed Details | Review

Description Timm Bäder 2016-10-21 08:21:58 UTC
Created attachment 338167 [details] [review]
gapplication: Properly free the option_strings

priv->option_strings gets set in g_application_add_main_option but currently is only freed if priv->packed_options is also set.
Comment 1 Matthias Clasen 2016-10-23 23:45:29 UTC
Review of attachment 338167 [details] [review]:

good catch
Comment 2 Matthias Clasen 2016-10-24 10:11:16 UTC
Attachment 338167 [details] pushed as f14389b - gapplication: Properly free the option_strings